# talk-stacking-your-monads

./: LICENSE  README.md  classy.diff  talk.org
code/: LICENSE  Main.hs  README.md  schema.sql  transaction-importer.cabal
code-classy/: Main.hs  app.cfg  dataz.csv  schema.sql  transaction-importer.cabal
code-classy/src/: App.hs  Csv.hs  Db.hs  Utils.hs
code-classy/src/Db/: Account.hs  Internal.hs  Place.hs  PlaceCategory.hs  Transaction.hs  TransactionAtmOperatorFee.hs  TransactionDirectCredit.hs  TransactionInternetTransfer.hs  TransactionVisa.hs
code-classy/tests/: CsvTests.hs  DbTests.hs
code-classy/tests/DbTests/: Internal.hs  PlaceCategory.hs  TransactionDirectCredit.hs  TransactionInternetTransfer.hs  TransactionVisa.hs
code-classy/tests/sql/: place.sql  transaction_internet_transfer.sql
code/src/: App.hs  Csv.hs  Db.hs  Types.hs  Utils.hs
code/src/Db/: Account.hs  Internal.hs  Place.hs  PlaceCategory.hs  Transaction.hs  TransactionAtmOperatorFee.hs  TransactionDirectCredit.hs  TransactionInternetTransfer.hs  TransactionVisa.hs
code/tests/: CsvTests.hs  DbTests.hs  Main.hs
code/tests/DbTests/: Account.hs  Internal.hs  Place.hs  Transaction.hs  TransactionAtmOperatorFee.hs
code/tests/csv/: broken.csv  ok.csv
code/tests/sql/: transaction.sql  transaction_atm_operator_fee.sql  transaction_direct_credit.sql  transaction_internet_transfer.sql  transaction_visa.sql
slides/: index.html
slides/css/: bens.css
slides/lib/css/: tomorrow-night-blue.css
