name:                transaction-importer
version:             0.1.0.0
synopsis:            Imports transactions from a Suncorp transaction CSV export into a postgres DB.
description:         This is example code for a BFPG talk that I'm giving about configuration
                     and error handling in Haskell.
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: App,Csv,Db,Types
  other-modules:
      Db.Account
    , Db.Internal
    , Db.Place
    , Db.PlaceCategory
    , Db.Transaction
    , Db.TransactionDirectCredit
    , Db.TransactionAtmOperatorFee
    , Db.TransactionInternetTransfer
    , Db.TransactionVisa
    , Utils

  build-depends:
      base                == 4.8.*
    , base-prelude
    , bifunctors          >= 5      && < 5.1
    , bytestring          == 0.10.*
    , cassava             == 0.4.*
    , either              == 4.4.*
    , errors              == 2.0.*
    , exceptions          == 0.6.*
    , hoist-error         == 0.1.*
    , lens                == 4.11.*
    , mtl                 == 2.2.*
    , opaleye             == 0.3.*
    , parsec              == 3.1.*
    , postgresql-simple   == 0.4.*
    , product-profunctors == 0.6.*
    , text                == 1.2.*
    , time                == 1.5.*
    , UtilityTM           == 0.0.*
    , validation          == 0.5.*
    , vector              == 0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable transaction-importer
  main-is: Main.hs
  build-depends:
      base                  == 4.8.*
     , base-prelude
     , configurator         == 0.3.*
     , errors
     , mtl                  == 2.2.*
     , postgresql-simple  
     , transaction-importer

  default-language:    Haskell2010
test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:
      base
    , transaction-importer
    , base-prelude
    , bytestring
    , errors
    , lens
    , mtl
    , MonadRandom
    , postgresql-simple
    , tasty
    , tasty-hunit
    , time
    , UtilityTM
