name:                transaction-importer
version:             0.1.0.0
synopsis:            Imports transactions from a Suncorp transaction CSV export into a postgres DB.
description:         This is example code for a BFPG talk that I'm giving about configuration
                     and error handling in Haskell.
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Csv,Types
  other-modules:   Utils
  build-depends:
      base              == 4.7.*
    , base-prelude
    , bifunctors        == 4.2.*
    , bytestring        == 0.10.*
    , cassava           == 0.4.*
    , either            == 4.3.*
    , errors            == 1.4.*
    , exceptions        == 0.6.*
    , lens              == 4.7.*
    , mtl               == 2.2.*
    , old-locale        == 1.0.*
    , opaleye           == 0.3.*
    , parsec            == 3.1.*
    , postgresql-simple == 0.4.*
    , text              == 1.2.*
    , time              == 1.4.*
    , UtilityTM         == 0.0.*
    , validation        == 0.4.*
    , vector            == 0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:
      base
    , transaction-importer
    , base-prelude
    , lens
    , mtl
    , tasty
    , tasty-hunit
    , time
